css/styles.css
body {
  font-family: 'Inter', sans-serif;
}

header {
  width: 100%;
  padding: 1.5em;
  height: 2em;
  display: flex;
  align-items: center;
}

header h2 {
  font-weight: 600;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

header h2 a {
  text-decoration: none;
  color: #28352f;
}

header .menu-button {
  width: 2em;
  height: 2em;
  background-color: transparent;
  background-image: url(../images/icons/hamburger.svg);
  background-repeat: no-repeat;
  background-position: center;
  border: none;
}

.headline {
  padding: 5em 3em 0 3em;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  background-image: url(../images/header-illsutration-mobile.svg);
  background-position: center 1em;
  background-size: 100% auto;
  background-repeat: no-repeat;
}

.headline h1 {
  font-size: 2.5em;
  font-weight: bold;
  text-align: center;
  color: #172b4d;
}

.headline span {
  display: block;
  color: #36b37e;
}

.paragraph-text {
  font-size: 1.2em;
  line-height: 1.5em;
  text-align: center;
  color: #172b4d;
}

.headline .paragraph-text {
  margin-top: 3em;
}

.headline ul {
  width: 100%;
  margin-top: 3em;
  display: flex;
  justify-content: center;
}

.work-card img {
  width: 100%;
}

.knowledge-icon-container img {
  width: 2.8em;
}

.headline ul img {
  margin: 0.5em;
}

.recent-work-section {
  margin-top: 3em;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.section-headline {
  padding: 0 1em;
  font-size: 2.5em;
  text-align: center;
  font-weight: bold;
  color: #172b4d;
}

.recent-work-section .section-headline::after {
  display: block;
  margin: 0.5em auto;
  content: "";
  width: 1em;
  height: 0.1em;
  background-color: #36b37e;
  border-radius: 0.25em;
}

.work-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
  justify-content: center;
  grid-gap: 1.5em;
  width: 100%;
  padding: 0 1.5em;
}

.work-card {
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: #ebf0ee;
  border: 1px solid #d0d9d4;
  border-radius: 0.5em;
  overflow: hidden;
}

.work-card-info {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
  background-color: white;
  border-top-left-radius: 0.5em;
  border-top-right-radius: 0.5em;
}

.work-card-info h3 {
  padding: 0 1em;
  font-weight: 600;
  color: #3a4a42;
  text-align: center;
  font-size: 1.5em;
}

.work-card-info ul {
  margin: 1em 0;
  display: flex;
  gap: 0.4em;
  justify-content: space-between;
  width: 100%;
}

.work-card-info ul li {
  font-size: 0.8em;
  font-weight: 600;
  padding: 0.8em 1em;
  background-color: #ebf0ee;
  color: #3a4a42;
  border-radius: 0.3em;
}

.green-button {
  padding: 0.8em;
  font-size: 1em;
  color: white;
  text-decoration: none;
  border: none;
  background-color: #36b37f;
  border-radius: 0.2em;
}

.green-button:hover {
  cursor: pointer;
  background-color: #36b37f;
  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
}

.green-button:active {
  background-color: #008552;
}

.work-card-info .green-button {
  margin: 0.8em auto 1em auto;
  max-width: 8em;
}

.about-me-section {
  margin-top: 3em;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.about-me-header {
  padding-top: 3em;
  display: flex;
  flex-direction: column;
  background-image: url(../images/illustration-1-about-me-mobile.svg), url(../images/illustration-2-about-me-mobile.svg);
  background-position: right top, left bottom;
  background-repeat: no-repeat, no-repeat;
}

.about-me-section .paragraph-text {
  margin-top: 1.5em;
  padding: 0 2em;
}

.about-me-section .green-button {
  max-width: 10em;
  margin: 2em auto 0 auto;
}

.about-me-cards-container {
  margin-top: 3em;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
  justify-content: center;
  grid-gap: 1.5em;
  width: 100%;
  padding: 0 1.5em;
}

.knowledge-card {
  width: 100%;
  padding: 2.5em 1em 0 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #ebf0ee;
  border: 1px solid #c1c7d0;
  border-radius: 0.5em;
}

.knowledge-icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  width: 4.5em;
  height: 4.5em;
  border-radius: 2.25em;
  box-shadow: 0 1em 1em rgba(0, 0, 0, 0.1);
}

.knowledge-card h3 {
  margin-top: 3em;
  font-size: 1.5em;
  font-weight: 600;
  text-align: center;
  color: #344563;
}

.knowledge-card ul {
  width: 100%;
  min-height: 5em;
  margin: 1em 0;
  display: flex;
  align-content: space-between;
  flex-wrap: wrap;
  justify-content: center;
}

.knowledge-card ul li {
  font-size: 0.8em;
  font-weight: 600;
  padding: 0.8em 1em;
  margin: 0 0.3em;
  background-color: white;
  color: #36b37e;
  border-radius: 0.5em;
}

